--- a/alx-movie-app/tsconfig.json
+++ b/alx-movie-app/tsconfig.json
@@ -24,6 +24,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "pages/moves/index.tsx", "next.config.mjs"  ],
+, "pages/moves/index.tsx", "next.config.ts"  ],
   "exclude": ["node_modules"]
 }
